--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch==2.1.1
+dgl -f https://data.dgl.ai/wheels/cu121/repo.html
 tqdm==4.66.1
 networkx==3.2.1
 matplotlib==3.8.2
@@ -10,6 +10,6 @@ prettytable==3.9.0
 numpy==1.26.2
 isort==5.12.0
 scikit-learn==1.3.2
-dgl==1.1.2
 ontolearn==0.6.1
 ipywidgets
+pydantic
