--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-torch==2.1.1
-dgl -f https://data.dgl.ai/wheels/cu121/repo.html
-torch==2.2.1
+torch==2.3.1
+torchdata
 tqdm==4.66.1
 networkx==3.2.1
 matplotlib==3.8.2
